[project]
name = "drweb-test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Иларион Ерченко", email = "turolretar@gmail.com"},
]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
