[project]
name = "drweb-test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Иларион Ерченко", email = "turolretar@gmail.com" }]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = ["ruff>=0.11.4"]

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
test.cmd = "python -m unittest discover tests -p '*.py'"
test.env = { PYTHONPATH = "${PYTHONPATH}:${PDM_PROJECT_ROOT}/src" }

app.working_dir = "src"
app.cmd = "python -m drweb_test"
